[package]
name = "rusty_bucket"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
clap = { version = "4.5.53", features = ["derive"] }
crossterm = "0.29.0"
indicatif = "0.18.3"
ratatui = "0.29.0"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
sha2 = "0.10.9"
tui-textarea = "0.7.0"
walkdir = "2.5.0"
whoami = "1.6.1"
